turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:1: error: ':' expected but ')' found.
def brosse(couleur)
                  ^LangtonsAnt:25: error: identifier expected but '}' found.
}
^